--- a/src/apps/core/views/svg-container.html
+++ b/src/apps/core/views/svg-container.html
@@ -14,6 +14,7 @@
 		 	 | 2. AWS Logos
 			 | 3. SSO Brand Icons
 			 | 4. Telicon Icons v2
+			 | 5. Other Icons
 		 	 |---------------------------
 		 	 ********************************************************************************************************
 		 -->
@@ -1116,5 +1117,21 @@
 		<symbol id="telicon2--x" viewBox="0 0 16 16">
 			<path d="M11.5 10.1l-1.4 1.4L8 9.4l-2.1 2.1-1.4-1.4L6.6 8 4.5 5.9l1.4-1.4L8 6.6l2.1-2.1 1.4 1.4L9.4 8z"/>
 		</symbol>
+
+		<!-- | ============================ -->
+		<!-- | 5. Other icons               -->
+		<!-- | ============================ -->
+		<!-- |
+			 | Icon reference sheet: https://joshsanders.github.io/telicon/icon-sheet.html
+		-->
+		<symbol id="other--file-csv" viewBox="0 0 42 48">
+			<g>
+			  <path d="M6 3v42h30V12h-9V3H6zM3 0h25.2L39 10.286V48H3V0z"></path>
+			  <path d="M37.5 16.5l4.498 4.499L42 21v16.5H0V21l.001-.001L4.5 16.5v4.499h32.999L37.5 16.5z"></path>
+			  <text font-family="SourceSansPro-Semibold, Source Sans Pro" font-size="12" font-weight="500" letter-spacing=".4" fill="#FFF">
+				<tspan x="10.5" y="32.5">CSV</tspan>
+			  </text>
+			</g>
+		  </symbol>
 	</svg> <!-- /svg defs -->
 </div>
