--- a/src/apps/core/views/app.html
+++ b/src/apps/core/views/app.html
@@ -1,4 +1,7 @@
 <header class="core-topbar-wrapper">
+	<div class="progress-indicator">
+		<div class="indeterminate"></div>
+	</div>
 	<nav class="core-topbar">
 		<a href="javascript:void(0);" class="links main-links" id="main_topbar_brand"></a>
 		<a href="javascript:void(0);" class="links main-links" id="main_topbar_current_app"></a>
@@ -47,12 +50,6 @@
 </footer>
 
 <div class="core-absolute">
-	<div class="loading-wrapper fixed-right">
-		<div class="line outer">
-			<div class="line inner"></div>
-		</div>
-	</div>
-
 	<div id="upload_progress">
 		<div class="upload-progress-overlay"></div>
 		<div class="upload-progress-content">
