--- a/src/apps/core/style/app.scss
+++ b/src/apps/core/style/app.scss
@@ -30,7 +30,123 @@ body,
 
 .core-topbar-wrapper {
 	background-color: #303039;
-	border-top: 5px solid $primary-color;
+	padding-top: 5px;
+
+	.progress-indicator {
+		position: absolute;
+		top: 0;
+		height: 5px;
+		display: block;
+		width: 100%;
+		background-color: $primary-color;
+		background-clip: padding-box;
+		overflow: hidden;
+
+		&.active {
+			position: fixed;
+			z-index: 9999;
+			background-color: transparentize($primary-color, .6);
+
+			.indeterminate {
+				background-color: $primary-color;
+
+				&:before {
+					content: '';
+					position: absolute;
+					background-color: inherit;
+					top: 0;
+					left: 0;
+					bottom: 0;
+					-webkit-animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
+					   -moz-animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
+							animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
+				}
+
+				&:after {
+					content: '';
+					position: absolute;
+					background-color: inherit;
+					top: 0;
+					left: 0;
+					bottom: 0;
+					-webkit-animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+					   -moz-animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+							animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+					-webkit-animation-delay: 1.15s;
+					   -moz-animation-delay: 1.15s;
+							animation-delay: 1.15s;
+				}
+			}
+		}
+	}
+}
+
+@-webkit-keyframes indeterminate {
+	0% {
+		left: -35%;
+		right: 100%;
+	}
+
+	60% {
+		left: 100%;
+		right: -90%;
+	}
+
+	100% {
+		left: 100%;
+		right: -90%;
+	}
+}
+
+@keyframes indeterminate {
+	0% {
+		left: -35%;
+		right: 100%;
+	}
+
+	60% {
+		left: 100%;
+		right: -90%;
+	}
+
+	100% {
+		left: 100%;
+		right: -90%;
+}
+}
+
+@-webkit-keyframes indeterminate-short {
+	0% {
+		left: -200%;
+		right: 100%;
+	}
+
+	60% {
+		left: 107%;
+		right: -8%;
+	}
+
+	100% {
+		left: 107%;
+		right: -8%;
+	}
+}
+
+@keyframes indeterminate-short {
+	0% {
+		left: -200%;
+		right: 100%;
+	}
+
+	60% {
+		left: 107%;
+		right: -8%;
+	}
+
+	100% {
+		left: 107%;
+		right: -8%;
+	}
 }
 
 .core-wrapper.dashboard .core-topbar-wrapper {
@@ -369,135 +485,6 @@ body,
 #main_topbar_account_toggle.masquerading ~ #main_topbar_myaccount i.fa:before {
 	content: "\f085";
 }
-
-/************************************************************/
-/********************** LOADING SPINNER *********************/
-/************************************************************/
-
-.loading-wrapper {
-	position: fixed;
-	z-index: 2000;
-	top: 0;
-	display: none;
-	width: 200px;
-	height: 200px;
-	background: $primary-color;
-	box-shadow: 0px 0px 2px 0px #303039;
-}
-.loading-wrapper.fixed-left {
-	left: 0;
-	-webkit-transform: translateX(-50%) translateY(-50%) rotate(315deg);
-	   -moz-transform: translateX(-50%) translateY(-50%) rotate(315deg);
-		-ms-transform: translateX(-50%) translateY(-50%) rotate(315deg);
-		 -o-transform: translateX(-50%) translateY(-50%) rotate(315deg);
-			transform: translateX(-50%) translateY(-50%) rotate(315deg);
-}
-.loading-wrapper.fixed-right {
-	right: 0;
-	-webkit-transform: translateX(50%) translateY(-50%) rotate(45deg);
-	   -moz-transform: translateX(50%) translateY(-50%) rotate(45deg);
-		-ms-transform: translateX(50%) translateY(-50%) rotate(45deg);
-		 -o-transform: translateX(50%) translateY(-50%) rotate(45deg);
-			transform: translateX(50%) translateY(-50%) rotate(45deg);
-}
-.loading-wrapper.active {
-	display: block;
-}
-.loading-wrapper .line {
-	position: relative;
-	display: inline-block;
-	-webkit-box-sizing: border-box;
-	   -moz-box-sizing: border-box;
-			box-sizing: border-box;
-	padding: .5em;
-	text-align: center;
-	vertical-align: middle;
-	border: 5px solid transparent;
-	border-top-color: #fff;
-	border-bottom-color: #fff;
-	border-radius: 50%;
-	background: transparent;
-}
-.loading-wrapper .line.outer {
-	top: 130px;
-	left: 80px;
-	-webkit-animation: half-spin 1s infinite;
-	   -moz-animation: half-spin 1s infinite;
-		 -o-animation: half-spin 1s infinite;
-			animation: half-spin 1s infinite;
-}
-.loading-wrapper .line.inner {
-	-moz-animation: half-spin-reverse 1s infinite;
-	  -o-animation: half-spin-reverse 1s infinite;
-		 animation: half-spin-reverse 1s infinite;
-
-	webkit-animation: half-spin-reverse 1s infinite;
-}
-@-webkit-keyframes half-spin {
-	0% {
-		-webkit-transform: rotateZ(-45deg);
-	}
-	100% {
-		-webkit-transform: rotateZ(135deg);
-	}
-}
-@-webkit-keyframes half-spin-reverse {
-	0% {
-		-webkit-transform: rotateZ(0deg);
-	}
-	100% {
-		-webkit-transform: rotateZ(-360deg);
-	}
-}
-@-moz-keyframes half-spin {
-	0% {
-		-moz-transform: rotateZ(-45deg);
-	}
-	100% {
-		-moz-transform: rotateZ(135deg);
-	}
-}
-@-moz-keyframes half-spin-reverse {
-	0% {
-		-moz-transform: rotateZ(0deg);
-	}
-	100% {
-		-moz-transform: rotateZ(-360deg);
-	}
-}
-@-o-keyframes half-spin {
-	0% {
-		-o-transform: rotateZ(-45deg);
-	}
-	100% {
-		-o-transform: rotateZ(135deg);
-	}
-}
-@-o-keyframes half-spin-reverse {
-	0% {
-		-o-transform: rotateZ(0deg);
-	}
-	100% {
-		-o-transform: rotateZ(-360deg);
-	}
-}
-@keyframes half-spin {
-	0% {
-		transform: rotateZ(-45deg);
-	}
-	100% {
-		transform: rotateZ(135deg);
-	}
-}
-@keyframes half-spin-reverse {
-	0% {
-		transform: rotateZ(0deg);
-	}
-	100% {
-		transform: rotateZ(-360deg);
-	}
-}
-
 
 /************************************************************/
 /******************** UPLOAD PROGRESS BAR *******************/
